# youtube

./: README.md
python - isolating tools with pipx/: Dockerfile  Makefile  README.md  pyproject.toml  start.py
python - isolating tools with pipx/isolating_tools_with_pipx/: dummy.py
