[tool.poetry]
name = "isolating-tools-with-pipx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "isolating_tools_with_pipx"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
